lang.java.statics.test/tests/positive/classes/inheritance/inherittoplevelclass.yes.javtest
STATIX ok
JAVAC ok

[A]
public class A {}

[B]
public class B extends A {}

