lang.java.statics.test/tests/negative/interfaces/interface-extends-class.no.javtest
STATIX fail java\.interfaces\.extends-interface
JAVAC  fail interface expected here

[I]
interface I extends A {}

[A]
class A {}
